<resources>
    <string name="app_name">LoveCalculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="result">Result</string>
    <string name="zero">0</string>
    <string name="equal">=</string>
    <string name="second_name">Second Name</string>
    <string name="plus">+</string>
    <string name="first_name">First Name</string>
    <string name="history">History</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="delete_message">Are you sure about this?</string>
    <string name="delete">Delete</string>
    <string name="cansel">Cansel</string>
    <string name="yes">Yes</string>
    <string name="try_again">Try again</string>
    <string name="ok">Ok</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="skip">Skip</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="get_started">Get Started</string>
</resources>